--- a/CodeTemplates/HTML/CSS/prisonStyle.css
+++ b/CodeTemplates/HTML/CSS/prisonStyle.css
@@ -37,3 +37,15 @@ body
   } 
 
 }
+
+
+
+<div class="video-container">
+        <video autoplay muted loop id="background-video">
+            <source src="willy.mp4" type="video/mp4">
+        </video>
+        <div class="content">
+            <h1>Free Willy and Flipper by the Numbers</h1>
+    <p>The past, present, adn future of captive whales and dolphins according to data and pop culture.</p>
+        </div>
+    </div>
