--- a/CodeTemplates/JS/style.css
+++ b/CodeTemplates/JS/style.css
@@ -7,11 +7,22 @@ p{
     position:fixed;
     margin-top: 30vh;
     margin-left: 40vw;
-    margin-right: 40vw;
+    margin-right: 90vw;
    
 }
 
  img {
-    max-width: 100%;
-    max-height: 100%;
+    width:500px;
+    height: 300px;
 }
+body{
+    background-color: black;
+}
+
+p{
+    color: white;
+}
+img{
+    outline: 4px solid white;
+}
+
